--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,8 @@ table {
 
 
 body {
-    background-color: LightGray;
+    
+   background-color: LightGray;
 }
 div {
     border: 1px solid Chocolate;
@@ -63,7 +64,15 @@ div {
 	width: 970px;
 	height: 70px;
 	margin: 0 auto;
+	padding: 0px 15px;
 }
 .top-navigation > .content > .logo {
 	margin: 14px;
+}
+.top-navigation > .content > .links {
+	float: right;
+
+}
+.top-navigation > .content > .links > li {
+	display: inline-block;
 }
