--- a/css/style.css
+++ b/css/style.css
@@ -67,11 +67,11 @@ div {
 	padding: 0px 15px;
 }
 .top-navigation > .content > .logo {
-	margin: 14px;
+	margin-top: 15px
 }
 .top-navigation > .content > .links {
 	float: right;
-
+	margin-top: 15px;
 }
 .top-navigation > .content > .links > li {
 	display: inline-block;
