--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+	box-sizing: border-box;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
@@ -46,14 +47,22 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+/* End of Reset */
 
+/* Trick to control borders and body */
 
 body {
     
    background-color: LightGray;
 }
+
 div {
     border: 1px solid Chocolate;
+}
+
+/* Start of Custom Styles */
+.content {
+	padding: 0 15px;
 }
 
 /* Navigation Section */
@@ -64,10 +73,14 @@ div {
 	width: 970px;
 	height: 70px;
 	margin: 0 auto;
-	padding: 0px 15px;
+	font-family: 'Roboto', sans-serif; 
+	font-size: 16px; 
+	color: #838994; 
+	letter-spacing: 0.03em;
 }
 .top-navigation > .content > .logo {
-	margin-top: 15px
+	/*margin-top: 15px*/
+	height: 70px;
 }
 .top-navigation > .content > .links {
 	float: right;
@@ -75,4 +88,9 @@ div {
 }
 .top-navigation > .content > .links > li {
 	display: inline-block;
+	margin-left: 37px;
+}
+.top-navigation .links > .active {
+	color: #4c5058;
+	font-weight: 600;
 }
