--- a/css/style.css
+++ b/css/style.css
@@ -73,11 +73,8 @@ div {
 	width: 970px;
 	height: 70px;
 	margin: 0 auto;
-	font-size: 16px; 
-	color: #838994; 
 }
 .content {
-	font-family: 'Roboto', sans-serif; 
 	letter-spacing: 0.03em;
 }
 .top-navigation .logo {
@@ -86,13 +83,21 @@ div {
 }
 .top-navigation .links {
 	float: right;
-	margin-top: 15px;
+	font-family: 'Roboto', sans-serif; 
+	color: #838994; 
+	font-size: 16px; 
+	margin-top: 25px;
+	-webkit-font-smoothing: antialiased;
 }
-.top-navigation .links > li {
+.top-navigation .links li {
 	display: inline-block;
-	margin-left: 37px;
+	margin-left: 25px;
 }
 .top-navigation .links > .active {
 	color: #4c5058;
 	font-weight: 600;
+}
+.top-navigation .links li:hover {
+	cursor: pointer;
+	color: #333333;
 }
