--- a/css/style.css
+++ b/css/style.css
@@ -101,3 +101,11 @@ div {
 	cursor: pointer;
 	color: #333333;
 }
+/* starting big pic part */
+.introduction {
+	background-image: url('/Users/helcionobre/Documents/Classes/FEWD/Projects/startup-landing-page-clone/images/first-background.jpg');
+	background-position: center bottom;
+	background-repeat: no-repeat;
+	background-size: cover;
+	height: 45.938rem;
+}
