--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,7 @@ div {
 	background-repeat: no-repeat;
 	background-size: cover;
 	height: 45.938rem;
+	overflow: auto;
 }
 h1, h3 {
 	color: white;
@@ -112,9 +113,30 @@ h1, h3 {
 	font-weight: lighter;
 }
 h1 {
-	font-size: 3rem
+	font-size: 3.0rem;
+	margin-top: 4rem;
 }
 h3 {
 	font-size: 1.5rem;
+	margin-top: 1.0rem;
+}
+.big-button {
+	text-shadow: none;
+	border-style: none;
+	border-radius: 4px;
+	padding: 16px 26px;
+	line-height: 1.33;
+	font-size: 1.125rem;
+	color: white;
+	background-color: #f15a29;
+	border-color: #f15a29;
+	margin-top: 2rem;
+	margin-bottom: 2rem;
+	margin: 0 auto;
+}
+.big-button:hover {
+	background-color: #d9400e;
+	border-color: #cf3d0e;
+	cursor: pointer;
 }
 
