--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,6 @@ div {
 .content {
 	padding: 0 15px;
 	width: 970px;
-	height: 70px;
 	margin: 0 auto;/* put container right in the middle */
 	letter-spacing: 0.03em;
 }
@@ -73,6 +72,9 @@ div {
 /* Navigation Section */
 .top-navigation {
 	background-color: #fff
+}
+.top-navigation > .content {
+		height: 70px;
 }
 .top-navigation .logo {
 	/*margin-top: 15px - why not?*/
@@ -120,19 +122,23 @@ h3 {
 	font-size: 1.5rem;
 	margin-top: 1.0rem;
 }
+.buttons {   /* fixed centalization of button creating new class */
+	color: white;
+	text-align: center;
+	margin: 0 auto;
+}
 .big-button {
 	text-shadow: none;
 	border-style: none;
 	border-radius: 4px;
-	padding: 16px 26px;
+	padding: 1rem 1.5rem;
 	line-height: 1.33;
 	font-size: 1.125rem;
-	color: white;
 	background-color: #f15a29;
 	border-color: #f15a29;
 	margin-top: 2rem;
 	margin-bottom: 2rem;
-	margin: 0 auto;
+	color: white;
 }
 .big-button:hover {
 	background-color: #d9400e;
