--- a/css/style.css
+++ b/css/style.css
@@ -162,27 +162,78 @@ h3 {
 	margin: 1.625rem 0 3.125rem;
 }
 
-.cases .devices {
+.cases {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: center;
+	padding-bottom: 0rem;
+	overflow: hidden;
+}
+
+.devices {
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
 	justify-content: center;
 	padding-bottom: 5rem;
+	overflow: hidden;
 }
-
-.cases .devices li {
+.cases .devices > li {
 	width: 33.333333%;
 	display: inline-block;
+	float: left;
 	/* styles to assist with debugging */
 	border: 1px solid black;
 	box-sizing: border-box;
-	height: 4rem;
-	float: left;
 }
 
-.caption h3 {
+.cases .devices h3 {
 	font-weight: 400;
 	font-size: 1.563rem;
 	margin: 2.5rem 0px 1.875rem;
 	color: #1d1e21;
 }
+
+	/* The footer */
+.social {
+	background-color: #fff;
+	overflow: auto;
+	padding-bottom: 9.375rem;
+	text-align: center;
+}
+
+.social hr {
+	border: 0;
+	border-top: 1px solid #eaebec;
+	margin: 1.313rem 0;
+}
+.social .icons > li {
+	border-radius: 1.25rem;
+	width: 2.5rem;
+	height: 2.5rem;
+	display: inline-block;
+	margin: 1.25rem 5px;
+	border: 1px solid #eaebec;
+	padding: 0.625rem 0;
+	text-align: center;
+}
+.content .copy {
+	font-size: 1rem;
+	text-align: center;
+	font-family: 'Roboto', sans-serif;
+	color: gray;
+	font-weight: 100;
+	margin-top: 0.5rem;
+	-webkit-font-smoothing: antialiased;
+}
+.social .twitter {
+	color: #55acee;
+}
+.social .facebook {
+	color: #4c66a4;
+}
+.social .instagram {
+	color: #3f729b;
+}
+/*::before*/
