--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ table {
 /* starting big pic part */
 .introduction {
 	
-	background-image: url('images/first-background.jpg');
+	background-image: url('../images/first-background.jpg');
 	background-position: center bottom;
 	background-repeat: no-repeat;
 	background-size: cover;
